Переезд на mapstruct. Тестирование маппинга.
